SQuirreL SQL Client Change Log
==============================


${squirrelsql.changelog.header}

Not yet released, available in our Subversion repository and in future snapshots and releases.
===============================================================================================

Enhancements:

Hibernate Plugin:
  - Redesign of HQL result display. Focus is now on displaying result objects instead of Hibernate generated SQL.
  - User can choose if he wants to use the Session's JDBC connection or the one configured with Hibernate.

Syntax Plugin:
  Duplicate line (ctrl+d) now duplicates the line at cursor if no text is selected
  and duplicates the selection if a selection exists.

Hibernate Plugin:
  On Windows the class path's files defined in the Hibernate configuration would remain locked even
  after disconnecting Hibernate. This doesn't happen anymore when Hibernate is run in its own process.

Graph Plugin:
  Tables can be added to a Graph from within the SQL-Editor (accessible from right mouse menu and tools popup).

Graph Plugin:
  Graphs can be copied and pasted.

Graph Plugin:
  New Session toolbar button to create links to Graphs of other JDBC-URLs or to Graphs that are placed arbitrary directories.
  With this feature it is possible to work with shared repositories of Graphs.


Bug fixes:

Graph Plugin: Opening Link dialog failed on Windows when one or more links already existed.

SQL Editor: Parser mistook minus signs in SQL IN lists as errors.

Error dialog showed up twice when an error occurred during Alias connect.

3026995 Fixed problem in squirrel-sql.bat for 64-bit windows.

Graph Plugin --> Query Builder:
  The "Sync result" button of the "Result" view now refreshes the result even if the SQL statement was not changed.


3.3.0 (11/20/2011)
==================

Enhancements:

Hibernate Plugin:
  Directories containing archive files (Jars, Zips) can now be added to a Hibernate configuration's classpath.