@@ -36,3 +36,5 @@ CodeCompletionPreferencesPanel.numberOfTables=number of tables
 
 CodeCompletionPreferencesPanel.showRemarksInColumnCompletionNote=Choose this option to see column remarks in code completion lists.\nNote: If you change this option on a running Session you need to do a Session cache refresh (F5)
 CodeCompletionPreferencesPanel.showRemarksInColumnCompletionChk=Show remarks in column completion
+
+CodeCompletionPreferencesPanel.matchCamelCase=Match completions CamelCase wise
